--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
+<html>
+
+<head>
+    <title>damn it.</title>
+    <link rel="stylesheet"
+        href="https://cdn.discordapp.com/attachments/692300235191484506/1246967786161573989/image.png">
+    <meta name="description" content="damn it.">
+</head>
+
 <body>
     <h1 style="align-items: center; font-weight: 900;color: #ff0000;">damn it.
     </h1>
     <p style="align-items: center; font-size: xx-small;color: #585858;">this site is empty.</p>
 </body>
+
+</html>
