--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 
 <head>
     <title>damn it.</title>
-    <link rel="stylesheet"
-        href="https://cdn.discordapp.com/attachments/692300235191484506/1246967786161573989/image.png">
+    <link href="https://cdn.discordapp.com/attachments/692300235191484506/1246967786161573989/image.png">
     <meta name="description" content="damn it.">
+    <link href="style.css">
 </head>
 
 <body>
-    <h1 style="align-items: center; font-weight: 900;color: #ff0000;">damn it.
+    <h1>damn it.
     </h1>
-    <p style="align-items: center; font-size: xx-small;color: #585858;">this site is empty.</p>
+    <p>this site is empty.</p>
 </body>
 
 </html>
