--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <title>damn it.</title>
     <link href="https://cdn.discordapp.com/attachments/692300235191484506/1246967786161573989/image.png">
     <meta name="description" content="damn it.">
-    <link href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 
 <body>
     <h1>damn it.
